# VkTutorial

./: .gitignore  LICENSE.md  README.md
code/: CMakeLists.txt
code/bootstrap/: CMakeLists.txt  app_base.cpp  app_base.hpp
code/bootstrap/camera/: CMakeLists.txt  camera.cpp  camera.hpp
code/bootstrap/device-builder/: CMakeLists.txt  device.cpp  device.hpp  device_builder.cpp  device_builder.hpp
code/bootstrap/input-manager/: CMakeLists.txt  input_manager.cpp  input_manager.hpp
code/bootstrap/instance-builder/: CMakeLists.txt  instance.hpp  instance_builder.cpp  instance_builder.hpp
code/bootstrap/physical-device-selector/: CMakeLists.txt  physical_device.hpp  physical_device_selector.cpp  physical_device_selector.hpp  swapchain_support_details.hpp
code/bootstrap/swapchain-builder/: CMakeLists.txt  swapchain.hpp  swapchain_builder.cpp  swapchain_builder.hpp
code/bootstrap/timer/: CMakeLists.txt  timer.cpp  timer.hpp
code/cmake/: PhysX.cmake  essentials.cmake  glfw_vulkan_glm.cmake
code/finished-projects/cube-builder/: README.md
code/finished-projects/cube-builder/application/: CMakeLists.txt  app.cpp  app.hpp  world.cpp  world.hpp
code/finished-projects/cube-builder/application/shaders/: cube_push_constant.hpp  shader.vert  shader_cube.hpp  shader_vertex.hpp
code/finished-projects/cube-builder/application/world/: CMakeLists.txt  block.cpp  block.hpp  world.cpp  world.hpp  world_space.cpp  world_space.hpp
code/finished-projects/mesh-division/: README.md  main.cpp
code/finished-projects/mesh-division/application/: app.cpp  app.hpp
code/finished-projects/mesh-shooter/: CMakeLists.txt  README.md  main.cpp
code/finished-projects/mesh-shooter/application/: app.cpp  app.hpp
code/finished-projects/mesh-shooter/application/shaders/: camera_proj_ubo.hpp
code/finished-projects/mesh-shooter/application/simulator/: simulator.cpp  simulator.hpp  simulator_base.cpp  utilities.cpp  utilities.hpp
code/finished-projects/model-loading/: CMakeLists.txt  README.md
code/finished-projects/model-loading/application/: CMakeLists.txt  app.cpp  app.hpp
code/finished-projects/model-loading/application/shaders/: shader.frag  shader.vert  vertex.hpp
code/finished-projects/pushing-cubes/: CMakeLists.txt
code/finished-projects/pushing-cubes/application/: CMakeLists.txt  app.cpp  app.hpp  camera.cpp  camera.hpp
code/finished-projects/pushing-cubes/application/shaders/: shader.vert
code/finished-projects/pushing-cubes/application/simulator/: CMakeLists.txt  simulator.cpp  simulator.hpp  simulator_base.cpp  simulator_base.hpp  utilities.cpp  utilities.hpp
code/finished-projects/rotating-cube/: CMakeLists.txt  README.md  main.cpp
code/finished-projects/rotating-cube/application/: CMakeLists.txt  app.cpp  app.hpp
code/finished-projects/rotating-cube/application/shaders/: shader.vert
code/finished-projects/sierpinski-triangle/: CMakeLists.txt  README.md  main.cpp
code/finished-projects/sierpinski-triangle/application/: CMakeLists.txt  app.cpp  app.hpp
code/finished-projects/sierpinski-triangle/application/shaders/: shader_vertex.hpp
code/src/: CMakeLists.txt  main.cpp
code/src/application/: CMakeLists.txt  app.cpp  app.hpp  shader_module.cpp  shader_module.hpp
code/src/application/shaders/: shader.vert  shader_vertex.hpp
code/src/bootstrap/: CMakeLists.txt  app_base.cpp  app_base.hpp
code/src/bootstrap/device-builder/: CMakeLists.txt  device.hpp  device_builder.cpp  device_builder.hpp
code/src/bootstrap/instance-builder/: CMakeLists.txt  instance_builder.cpp  instance_builder.hpp
code/src/bootstrap/physical-device-selector/: CMakeLists.txt  physical_device.hpp  physical_device_selector.hpp
code/src/bootstrap/swapchain-builder/: CMakeLists.txt  swapchain_builder.cpp  swapchain_builder.hpp
code/src/headers/: app.hpp  pipeline_core.hpp  toolset.hpp  vertex.hpp
code/src/headers/bootstrap/: bootstrap.hpp  instance_builder.hpp  physical_device_selector.hpp
code/src/headers/core-objects/: bootstrap.hpp  debug_messenger.hpp  device.hpp  instance.hpp  state_board.hpp  swapchain.hpp  window.hpp
code/src/headers/core-objects/structs/: state_board.hpp
code/src/headers/pipeline/: default_pipeline.hpp  pipeline_blueprint.hpp
code/src/implementations/: app.cpp  pipeline_core.cpp
code/src/implementations/bootstrap/: instance_builder.cpp  physical_device_selector.cpp
code/src/implementations/core-objects/: bootstrap.cpp  debug_messenger.cpp  device.cpp  instance.cpp  state_board.cpp  swapchain.cpp  window.cpp
code/src/implementations/pipeline/: default_pipeline.cpp  pipeline_blueprint.cpp
code/src/interfaces/: iinstance.h  ipipeline_builder.h  iswapchain.h  iwindow.h
code/src/toolset/: CMakeLists.txt  deletion_queue.hpp  initializers.cpp  initializers.hpp  toolset.cpp  toolset.hpp
code/src/vk-object-headers/__APP__/: vertex.hpp
code/src/vk-object-headers/instance/: my_instance.hpp
code/src/vk-object-headers/instance/instance-builders/: default_instance_builder.hpp
code/src/vk-object-headers/pipeline/pipeline-builders/: my_default_pipeline_builder.hpp
code/src/vk-object-headers/swapchain/: my_swapchain.hpp
code/src/vk-object-headers/window/: my_window.hpp
code/src/vk-object-implementations/__APP__/: app.cpp
code/src/vk-object-implementations/instance/: my_instance.cpp
code/src/vk-object-implementations/instance/instance-builders/: debug_instance_builder.cpp
code/src/vk-object-implementations/pipeline/builders/: my_default_pipeline_builder.cpp
code/src/vk-object-interfaces/: iinstance_builder.h
code/toolset/: CMakeLists.txt  buffer.cpp  buffer.hpp  deletion_queue.hpp  event.hpp  initializers.hpp  input_manager.cpp  input_manager.hpp  shader_module.cpp  shader_module.hpp  toolset.cpp  toolset.hpp
documentation/: documentation.aux  documentation.tex  documentation.toc
src/: first_app.cpp  first_app.hpp  main.cpp  my_device.cpp  my_device.hpp  my_instance.cpp  my_instance.hpp  my_swap_chain.cpp  my_swap_chain.hpp  my_window.cpp  my_window.hpp  swap_chain_support_details.hpp  vlk_device.cpp  vlk_device.hpp  (+4 more)
(+52 files in other folders)
